<resources>
    <string name="app_name">Plánovač tras</string>
    <string name="detail_title">Detail místa</string>
    <string name="description">Popis</string>
    <string name="latitude">Zeměpisná šířka</string>
    <string name="longitude">Zeměpisná délka</string>
    <string name="mowing_count_per_year">Počet sečí za rok</string>
    <string name="place_id">ID místa</string>
    <string name="save">Uložit</string>
    <string name="time_requirement_minutes">Časová náročnost (hodiny)</string>
    <string name="title_map">Mapa</string>
    <string name="title_planning">Plánování</string>
    <string name="title_history">Historie</string>
    <string name="title_done">Dokončené</string>
    <string name="visit_dates_yyyy_mm_dd_comma_separated">Data návštěvy (YYYY-MM-DD, oddělené čárkou)</string>
    <string name="work_cost">Cena práce</string>
    <string name="caretaker">Správce</string>
    <string name="centre">Středisko</string>
    <string name="area">Plocha</string>
    <string name="locked">Uzamčeno</string>
    <string name="url_link_navigation">Otevřít v Mapy.cz</string>
    <string name="end_time">Cílový čas (HH:MM)</string>
    <string name="end_point">Cílový bod (zem. šířka, délka)</string>
    <string name="start_time">Startovní čas (HH:MM)</string>
    <string name="start_point">Startovní bod (zem. šířka, délka)</string>
    <string name="def_start_time">06:00</string>
    <string name="def_end_time">18:00</string>
    <string name="work_speed">Rychlost práce: 1.0 x</string>
    <string name="add_extra_places_to_route">Doplnit další místa, pokud zbyde čas</string>
    <string name="last_mowing_in">Čas od posledního sečení (týdny):</string>
    <string name="do_not_add_completed_this_year">Přidávat místa se splněným počtem navštívení pro aktuální rok</string>
    <string name="add_waypoint">+ přidat místo průjezdu</string>
    <string name="generate_route">Generuj trasu</string>
    <string name="open_in_mapy_cz">Otevřít v Mapy.cz</string>
    <string name="choose_point">Vybrat</string>
    <string name="openstreetmap_license_attr">© OpenStreetMap</string>
    <string name="delete_all">Smazat vše</string>
    <string name="mark_as_done">Označit jako dokončené</string>
    <string name="delete">Smazat</string>
    <string name="empty_done_state">Zde bude přehled datumů navštívení jednotlivých hřbitovů.</string>
</resources>