<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:amdroid="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_alignTop="@+id/action_save">

    <!-- Scrollable content with all the TextInputLayouts -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Editable Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etPlaceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable Time Requirement -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTimeRequirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etTimeRequirement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_requirement_minutes"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable area -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable Mowing Count Per Year -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMowingCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etMowingCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mowing_count_per_year"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable Visit Dates (as comma separated string) -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilVisitDates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etVisitDates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/visit_dates_yyyy_mm_dd_comma_separated" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="Poloha" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Editable Work Cost -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWorkCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etWorkCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/work_cost"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Editable caretaker -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCaretaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etCaretaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/caretaker" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Editable centre -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCentre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etCentre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/centre" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Editable locked (switch button) -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swLocked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locked" />


        </LinearLayout>
    </ScrollView>

    <!-- Red Delete Button at the bottom -->
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Odstranit"
        amdroid:layout_margin="4dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
